--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "standard && mocha",
     "test-watch": "standard && mocha --watch",
     "prepublushOnly": "npm t",
-    "postPublish": "git push origin && git push origin --tags"
+    "postpublish": "git push origin && git push origin --tags"
   },
   "dependencies": {
     "axios": "^0.19.0",
