--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postpublish": "git push origin && git push origin --tags"
   },
   "dependencies": {
+    "@pkgjs/create": "0.0.1",
     "axios": "^0.19.0",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.0",
