--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postpublish": "git push origin && git push origin --tags"
   },
   "dependencies": {
-    "@pkgjs/create": "0.0.1",
+    "@pkgjs/create": "^0.2.0",
     "commander": "^2.19.0",
     "fs-extra": "^7.0.0",
     "got": "^9.6.0",
