--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "inquirer": "^6.2.0",
     "parse-gitignore": "^1.0.1",
     "safe-parse-list": "0.0.1",
-    "shelljs": "^0.8.2"
+    "shelljs": "^0.8.2",
+    "shell-escape": "^0.2.0"
   },
   "devDependencies": {
     "mocha": "^6.2.2",
