--- a/package.json
+++ b/package.json
@@ -20,23 +20,25 @@
     "url": "git@github.com:wesleytodd/create-git.git"
   },
   "scripts": {
-    "test": "standard && mocha",
-    "test-watch": "standard && mocha --watch",
-    "prepublushOnly": "npm t",
+    "test": "standard && c8 mocha",
+    "test:watch": "mocha --watch",
+    "test:debug": "mocha --insepct --inspect-brk --timeout=0",
+    "test:cover": "c8 mocha",
+    "release": "npm t && standard-version && npm publish",
     "postpublish": "git push origin && git push origin --tags"
   },
   "dependencies": {
-    "@pkgjs/create": "^0.2.0",
-    "commander": "^2.19.0",
     "fs-extra": "^7.0.0",
     "got": "^9.6.0",
-    "inquirer": "^6.2.0",
+    "opta": "0.0.5",
     "parse-gitignore": "^1.0.1",
-    "safe-parse-list": "0.0.1",
-    "shelljs": "^0.8.2"
+    "safe-parse-list": "0.0.1"
   },
   "devDependencies": {
+    "c8": "^7.3.0",
+    "fs-test-fixtures": "^0.1.3",
     "mocha": "^6.2.2",
-    "standard": "^14.3.1"
+    "standard": "^14.3.1",
+    "standard-version": "^9.0.0"
   }
 }
