--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "fs-extra": "^7.0.0",
     "got": "^9.6.0",
     "inquirer": "^7.3.3",
-    "loggerr": "^3.0.0-3",
+    "loggerr": "^3.0.0",
     "opta": "^0.0.6",
     "parse-gitignore": "^1.0.1",
     "safe-parse-list": "0.0.1"
