--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "loggerr": "^3.3.0",
     "opta": "^1.0.2",
     "parse-gitignore": "^1.0.1",
-    "safe-parse-list": "0.0.1"
+    "safe-parse-list": "^0.1.1"
   },
   "devDependencies": {
     "c8": "^8.0.1",
